rpg-bases-model

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <h1>Bienvenido a tu aventura</h1>
+    
+        <div id="personaje"></div>
+        <br>
+        <div id="menu">
+            <button onclick="entrarSala('practica')">Sala de Práctica</button>
+            <button onclick="entrarSala('npc')">Sala de NPC</button>
+            <button onclick="entrarSala('hospital')">Hospital</button>
+            
+        </div>
+        <div id="sala">
+            <!-- Aquí se mostrarán las salas -->
+        </div>
+
     <script type="module" src="/src/patterns/creational/factory/Main.ts"></script>
   </body>
 </html>
