--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Rpg Bases</title>
   </head>
   <body>
     <div id="app"></div>
@@ -23,6 +23,6 @@
             <!-- Aquí se mostrarán las salas -->
         </div>
 
-    <script type="module" src="/src/patterns/creational/factory/Main.ts"></script>
+    <script type="module" src="src/patterns/creational/factory/Main.ts" defer></script>
   </body>
 </html>
