--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <!-- Aquí se mostrarán las salas -->
         </div>
 
-    <script type="module" src="src/patterns/creational/factory/Main.ts" defer></script>
+    <script type="module" src="src/main.ts" defer></script>
   </body>
 </html>
