--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/patterns/creational/factory/Main.ts"></script>
+
+    <div id="tama"></div>
+
+    <button id="restbtn">Rest</button>
+    <button id="eatbtn">Eat</button>
+    <button id="bathbtn">Bath</button>
+    <button id="run">Run Time!</button>
+
+    
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
